# C-.PingPong

./: CMakeLists.txt  Comenzi.txt  Game.cpp  Game.h  GameScreen.cpp  GameScreen.h  Player.cpp  Player.h  PlayerUI.cpp  PlayerUI.h  README.md  ball.cpp  ball.h  constante.h  main.cpp  pos.h
